# fin-advisor-llm-api

fin-advisor-llm-api/: gunicorn.conf.py  main.py  monitor.py  pyproject.toml
fin-advisor-llm-api/fin_advisor_llm_api/: .env
fin-advisor-llm-api/fin_advisor_llm_api/app/api/: routes.py
fin-advisor-llm-api/fin_advisor_llm_api/app/chains/: fin_advisor_chain.py  multi_agent.py  planning_agent.py  resum_qa_chain.py.revisit  test_chain.py  test_prompt.py  test_tool_chain.py  tool_agent.py
fin-advisor-llm-api/fin_advisor_llm_api/app/prompts/: __init__.py  prompt.py
fin-advisor-llm-api/fin_advisor_llm_api/app/tools/: tool.py
